# asynch

./: .gitignore  Makefile.am  README.md  config_msvc.h  configure  configure.ac
GUI/: Visual_interface.py
assim/: Makefile.am  assim.c  assim.h  assimExtended.c  assimExtendedApproxSerial.c  assimExtendedDirectSerialNew.c  assimExtendedDirectSerialOld.c  assimLeastSquares.c  assimLeastSquaresFull.c  assimLeastSquaresLinear.c  assim_least_squares_linear.c  assim_ls_methods.c  assim_ls_methods.h  assim_models.c  assim_models.h  assim_persis.c  assim_scale.c  assimlsmethods.c  assimlsmethods.h  assimmethods.c  assimmethods.h  assimpersis.c  assimpersis_end.c  assimserial.c  forecaster_methods.c  forecaster_methods.h  makefile  tibebu.c
conda/: build.sh  meta.yaml
docs/: assim.rst  builtin_models.rst  config.h5array.rst  config.rst  index.rst  input_output.rst  model_400.rst
examples/: clearcreek.sh
forecasters/: asynchpersis.c  asynchpersis_end.c  forecaster_maps.c  forecaster_maps_end.c  forecaster_methods.h
gui/asynch/: .angular-cli.json  README.md  package.json
gui/asynch/e2e/: app.e2e-spec.ts  app.po.ts
gui/asynch/src/: config.json  index.html  styles.scss  typings.d.ts
gui/asynch/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  config.ts  file-ext-valid.directive.spec.ts  file-ext-valid.directive.ts  file-ext.pipe.spec.ts  file-ext.pipe.ts  filedrop.directive.spec.ts  filedrop.directive.ts  models.ts
gui/asynch/src/app/config-form/: config-form.component.html  config-form.component.scss  config-form.component.ts
gui/asynch/src/app/filedrop/: filedrop.component.html  filedrop.component.scss  filedrop.component.spec.ts  filedrop.component.ts
gui/asynch/src/app/saveas-dialog/: saveas-dialog.component.html  saveas-dialog.component.spec.ts  saveas-dialog.component.ts
ide/msvc/: asynch.sln
ide/msvc/assim/: assim.vcxproj  assim.vcxproj.filters
ide/msvc/assim_persis/: assim_persis.vcxproj  assim_persis.vcxproj.filters
ide/msvc/asynch/: asynch.vcxproj  asynch.vcxproj.filters
ide/msvc/asynch_py/: asynch_py.vcxproj  asynch_py.vcxproj.filters
ide/msvc/asynchlib/: asynchlib.vcxproj  asynchlib.vcxproj.filters
py/: asynch_interface_py.c  asynch_interface_py.h
src/: Makefile.am  advance.c  assim_cli.c  asynch_cli.c  asynch_interface.c  asynch_interface.h  asynchdist.c  asynchdist_custom.c  config_gbl.c  config_json.c  config_json.h  cson.c  cson.h  forcings.c  forcings.h  io.c  io.h  modeloutputs.c  modeloutputs.h  problems.c  processdata.c  processdata.h  rainfall.c  riversys.c  riversys.h  rkmethods.c  rkmethods.h  solvers.c  solvers.h  structs.h  system.c  system.h
src/assim/: ancillary.c  ancillary.h  linear_least_squares.c  linear_least_squares.h  models.c  models.h  structs.h
src/models/: check_consistency.c  check_consistency.h  definitions.c  equations.c  equations.h  output_constraints.c  output_constraints.h
tools/: Makefile.am
